Fixat z-index för toggle-sidebar

--- a/css/readtheorg.css
+++ b/css/readtheorg.css
@@ -456,6 +456,7 @@ table tr:nth-child(2n) td{
         margin: 0;
         padding: 0;
         opacity: 0.7;
+        z-index: 100;
     }
 
     #table-of-contents .close-sidebar {
